--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.1",
+    "milibreria": "github:Pablo-Vega/ProyectoUT1",
+    "proyecto-react": "github:Pablo-Vega/Proyecto-React",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
